# Mikumari

./: .gitignore  CMakeLists.txt
model/: model.4.clockwork
proto/: mikumari.proto
src/client/: main.cpp
src/controller/: main.cpp
src/worker/: batched.h  cache.cpp  cache.h  check_model.cpp  config.h  cuda_common.h  generator.h  main.cpp  memory.cpp  memory.h  model_loader.h  modeldef.h  so.cpp  so.h  worker.h
src/worker/clockwork/: cache.cpp  cache.h  config.h  cuda_common.h  memory.cpp  memory.h  modeldef.cpp  modeldef.h  thread.cpp  thread.h  util.cpp  util.h
src/worker/clockwork/api/: worker_api.cpp  worker_api.h
src/worker/clockwork/model/: batched.cpp  batched.h  cuda.cpp  cuda.h  memfile.cpp  memfile.h  model.cpp  model.h  so.cpp  so.h
src/worker/tvm/: meta_data.h  runtime_base.h  thread_storage_scope.h
